--- a/src/main/resources/templates/backed/admin/admin.html
+++ b/src/main/resources/templates/backed/admin/admin.html
@@ -79,7 +79,7 @@
                     <i class="iconfont nav_right">&#xe697;</i></a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('待审核列表','order-list.html')">
+                        <a onclick="xadmin.add_tab('待审核列表','/toAdd')">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>待审核列表</cite></a>
                     </li>
