--- a/src/main/resources/templates/backed/admin/failedOrganizationsList.html
+++ b/src/main/resources/templates/backed/admin/failedOrganizationsList.html
@@ -116,7 +116,7 @@
                 orgCode: $('input[name="orgCode"]').val(),
                 orgName: $('input[name="orgName"]').val(),
             }
-            ,title: '黑名单数据表'
+            ,title: '没通过审核的组织数据表'
             ,cols: [
                 [
                     {type: 'checkbox', fixed: 'left'}
