--- a/src/main/resources/templates/backed/admin/toAuditOrganizationsList.html
+++ b/src/main/resources/templates/backed/admin/toAuditOrganizationsList.html
@@ -123,7 +123,7 @@
                 orgCode: $('input[name="orgCode"]').val(),
                 orgName: $('input[name="orgName"]').val(),
             }
-            ,title: '黑名单数据表'
+            ,title: '待审核的组织数据表'
             , cellMinWidth: 80//全局定义常规单元格的最小宽度，layui 2.2.1 新增
             ,cols: [
                 [
