--- a/src/main/resources/templates/backed/admin/add.html
+++ b/src/main/resources/templates/backed/admin/add.html
@@ -66,7 +66,7 @@
             <div style="margin-left: 100px">
                 <div class="form-group" style="display:inline-block;vertical-align: top;">
                     <div class="input-group"><span class="input-group-addon">产品图组</span>
-                        <input type="file" name="files" value="请选择文件" webkitdirectory directory>
+                        <input type="file" name="file" value="请选择文件" multiple>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
         $("button[type='submit']").click(function () {
             var st = parent.layer.getFrameIndex(window.name);
             parent.layer.close(st);
-            parent.window.location.href = "/toWhiteList";
+            parent.window.location.href = "/admin";
         })
 
         //日期
