--- a/src/main/resources/templates/backed/admin/thePublishedList.html
+++ b/src/main/resources/templates/backed/admin/thePublishedList.html
@@ -22,12 +22,11 @@
 
 
 </head>
-
 <script type="text/html" id="toolbarDemo">
-    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">批量拉黑</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">删除</button>
 </script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="del">拉进黑名单</a>
+    <a class="layui-btn layui-btn-xs" lay-event="del">删除</a>
 </script>
 <body>
 <div class="x-nav">
@@ -49,20 +48,21 @@
                     <form class="layui-form" action="">
                         <div class="layui-form layui-form-pane">
                             <div class="layui-form-item">
-                                <div class="layui-inline">
-                                    <input type="text" id="name" name="name" placeholder="请输入姓名"
+
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="title" name="title" placeholder="项目名称"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="sfzh" name="sfzh" placeholder="请输入身份证号码"
+                                    <input type="text" id="name" name="name" placeholder="申请人"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="phone" name="phone" placeholder="请输入联系方式"
+                                    <input type="text" id="checkUser" name="checkUser" placeholder="审核人"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="orgCode" name="orgCode" placeholder="请输入组织编号"
+                                    <input type="text" id="orgCode" name="orgCode" placeholder="组织编号"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
@@ -70,17 +70,21 @@
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="role" name="role" placeholder="请输入角色"
+                                    <input type="text" name="timeLeft" id="timeLeft" lay-verify="date" placeholder="yyyy-MM-dd"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" name="timeRight" id="timeRight" lay-verify="date" placeholder="yyyy-MM-dd"
                                            autocomplete="off" class="layui-input">
                                 </div>
 
                                 <div class="layui-inline" style="margin-left: 9px">
                                     <button class="layui-btn" lay-submit="" lay-filter="search"><i class="layui-icon">&#xe615;</i>
                                     </button>
-                                    <button type="reset" class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe669;</i></button>
+                                    <button type="reset" class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe669;</i>
+                                    </button>
                                 </div>
                             </div>
-
                         </div>
                         <div>
                             <!--<table class="layui-table"></table>-->
@@ -100,13 +104,22 @@
 <!--             style="border: 1px solid #aaaaaa;cursor: pointer">-->
 <!--    </div>-->
 <!--</script>-->
+
 <script id="img" type="text/html">
     {{# var srr=d.filePath.split(",");
     for(var j in srr) { srr[j] }}
-    <div class="layer-photos-demo" style="margin:0 10px; display:inline-block !important; display:inline;  max-width:70px; max-height:50px;">
-        <img style=" max-width:70px; max-height:50px;" th:layer-src="${filePath}+'{{srr[j]}}'" th:src="${filePath}+'{{srr[j]}}'" />
+    <div class="layer-photos-demo"
+         style="margin:0 10px; display:inline-block !important; display:inline;  max-width:70px; max-height:50px;">
+        <img style=" max-width:70px; max-height:50px;" th:layer-src="${filePath}+'{{srr[j]}}'"
+             th:src="${filePath}+'{{srr[j]}}'"/>
     </div>
     {{# } }}
+</script>
+
+<script type="text/html" id="checkboxTpl">
+    <!-- 这里的 checked 的状态只是演示 -->
+    <input type="checkbox" name="lock" value="{{d.id}}" title="锁定" lay-filter="lockDemo" {{ d.id== 10006
+           ? 'checked' : '' }}>
 </script>
 
 <script type="text/javascript" th:src="@{/layui2.6/layui.js}" charset="UTF-8"></script>
@@ -120,45 +133,40 @@
         const tableIns = table.render({
             elem: '#test',
             type: 'GET'
-            ,url:'/user/userWhiteList'
-            ,toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
+            , url: '/org/selectPassOrgList'
+            , toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
             , where: {
+                title: $('input[name="title"]').val(),
                 name: $('input[name="name"]').val(),
-                sfzh: $('input[name="sfzh"]').val(),
-                phone: $('input[name="phone"]').val(),
+                checkUser: $('input[name="checkUser"]').val(),
                 orgCode: $('input[name="orgCode"]').val(),
                 orgName: $('input[name="orgName"]').val(),
-                role: $('input[name="role"]').val()
+                timeLeft: $('input[name="timeLeft"]').val(),
+                timeRight: $('input[name="timeRight"]').val(),
             }
-            ,title: '白名单数据表'
-            ,cols: [
+            , title: '已发布的项目数据表'
+            , cellMinWidth: 80//全局定义常规单元格的最小宽度，layui 2.2.1 新增
+            , cols: [
                 [
                     {type: 'checkbox', fixed: 'left'}
-                    ,{
+                    , {
                     align: 'center', title: '序号', width: 80, templet: function (data) {
                         return (data.LAY_TABLE_INDEX + 1);
                     }
                 }
-                    ,{field:'account', title:'用户名', align: 'center', width:120, edit: 'text'}
-                    ,{field:'role', title:'角色', align: 'center', width:120, edit: 'text'}
-                    ,{field:'sex', title:'性别', align: 'center', width:80, edit: 'text', sort: true}
-                    ,{field:'name', title:'姓名', align: 'center', width:100}
-                    ,{field:'sfzh', title:'身份证', align: 'center'}
-                    ,{field:'nation', title:'民族', align: 'center', width:80, sort: true}
-                    ,{field:'birth', title:'出生时间', align: 'center', width:120}
-                    ,{field:'phone', title:'联系电话', align: 'center', width:100, sort: true}
-                    ,{field:'area', title:'籍贯', align: 'center', width:120}
-                    ,{field:'filePath', title:'文件', align: 'center', width:100, templet: "#img", event: "pit"}
-                    ,{field:'orgCode', title:'组织编号', align: 'center', width:120}
-                    ,{field:'orgName', title:'组织名字', align: 'center', width:120}
-                    ,{field:'balance', title:'账户余额', align: 'center', width:120}
-                    ,{field:'status', title:'账号状态', align: 'center', width:120}
-                    ,{field:'createTime', title:'创建时间', align: 'center', width:120}
-                    ,{field:'updateTime', title:'更新时间', align: 'center', width:120}
-                    ,{fixed: 'right', title:'操作', align: 'center', toolbar: '#barDemo', width:100}
+                    , {field: 'orgCode', title: '组织编号', align: 'center', edit: 'text'}
+                    , {field: 'orgName', title: '组织名称', align: 'center', edit: 'text'}
+                    , {field: 'filePath', title: '文件', align: 'center', width: 100, templet: "#img", event: "pit"}
+                    , {field: 'address', title: '地址', align: 'center', edit: 'text'}
+                    , {field: 'linkman', title: '联系人', align: 'center'}
+                    , {field: 'phone', title: '联系方式', align: 'center'}
+                    , {field: 'email', title: '电子邮箱', align: 'center', sort: true}
+                    , {field: 'lock', title: '是否锁定', width: 110, templet: '#checkboxTpl', unresize: true}
+                    , {field: 'createTime', title: '创建时间', align: 'center'}
+                    , {fixed: 'right', title: '操作', align: 'center', toolbar: '#barDemo', width: 80}
                 ]
             ]
-            ,page: true
+            , page: true
             , even: true
         });
 
@@ -173,32 +181,45 @@
             return false;
         });
 
+        //日期
+        laydate.render({
+            elem: '#date'
+        });
+        laydate.render({
+            elem: '#date1'
+        });
+
+        //监听锁定操作
+        form.on('checkbox(lockDemo)', function (obj) {
+            layer.tips(this.value + ' ' + this.name + '：' + obj.elem.checked, obj.othis);
+        });
+
 
 //监听行工具事件
-        table.on('tool(test)',function (obj) {
-            const data=obj.data,
-                layEvent=obj.event;
-            if (layEvent==='del'){
-                layer.confirm('确定要拉其进黑名单吗?',function (index) {
+        table.on('tool(test)', function (obj) {
+            const data = obj.data,
+                layEvent = obj.event;
+            if (layEvent === 'del') {
+                layer.confirm('确定要拉其进黑名单吗?', function (index) {
                     obj.del()
                     layer.close(index);
                     $.ajax({
-                        url: '/user/blackUser?id='+data.id ,
-                        type:'POST',
-                        success:function (res) {
-                            if (res.code==200){
+                        url: '/user/whiteUser?id=' + data.id,
+                        type: 'POST',
+                        success: function (res) {
+                            if (res.code == 200) {
                                 layer.msg("操作成功!", {icon: 6});
                                 setTimeout(function () {
                                     location.reload();
                                 }, 1000);
-                            }else {
-                                layer.msg("操作失败!",{icon:5})
+                            } else {
+                                layer.msg("操作失败!", {icon: 5})
                             }
                         }
                     });
                     return false;
                 });
-            }else if (obj.event === 'pit') {
+            } else if (obj.event === 'pit') {
                 layer.photos({
                     photos: '.layer-photos-demo'
                     , anim: 5 //0-6的选择，指定弹出图片动画类型，默认随机（请注意，3.0之前的版本用shift参数）
@@ -231,7 +252,7 @@
                             data: JSON.stringify(ids),
                             contentType: "application/json;charset=UTF-8",
                             success: function (res) {
-                                console.log(JSON.stringify(res) )
+                                console.log(JSON.stringify(res))
                                 if (res) {
                                     layer.msg("操作成功", {icon: 6});
                                     setTimeout(function () {
@@ -246,6 +267,7 @@
                         return false;
                     })
                     break;
+
             }
         });
     });
