--- a/src/main/resources/templates/backed/auditor/approvedProjectList.html
+++ b/src/main/resources/templates/backed/auditor/approvedProjectList.html
@@ -22,12 +22,11 @@
 
 
 </head>
-
 <script type="text/html" id="toolbarDemo">
-    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">批量拉黑</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">删除</button>
 </script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="del">拉进黑名单</a>
+    <a class="layui-btn layui-btn-xs" lay-event="del">删除</a>
 </script>
 <body>
 <div class="x-nav">
@@ -49,20 +48,21 @@
                     <form class="layui-form" action="">
                         <div class="layui-form layui-form-pane">
                             <div class="layui-form-item">
-                                <div class="layui-inline">
-                                    <input type="text" id="name" name="name" placeholder="请输入姓名"
+
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="title" name="title" placeholder="项目名称"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="sfzh" name="sfzh" placeholder="请输入身份证号码"
+                                    <input type="text" id="name" name="name" placeholder="申请人"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="phone" name="phone" placeholder="请输入联系方式"
+                                    <input type="text" id="checkUser" name="checkUser" placeholder="审核人"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="orgCode" name="orgCode" placeholder="请输入组织编号"
+                                    <input type="text" id="orgCode" name="orgCode" placeholder="组织编号"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
@@ -70,7 +70,11 @@
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="role" name="role" placeholder="请输入角色"
+                                    <input type="text" id="timeLeft" name="timeLeft" placeholder="创建时间"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="timeRight" name="timeRight" placeholder="创建时间"
                                            autocomplete="off" class="layui-input">
                                 </div>
 
@@ -80,7 +84,6 @@
                                     <button type="reset" class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe669;</i></button>
                                 </div>
                             </div>
-
                         </div>
                         <div>
                             <!--<table class="layui-table"></table>-->
@@ -100,6 +103,7 @@
 <!--             style="border: 1px solid #aaaaaa;cursor: pointer">-->
 <!--    </div>-->
 <!--</script>-->
+
 <script id="img" type="text/html">
     {{# var srr=d.filePath.split(",");
     for(var j in srr) { srr[j] }}
@@ -107,6 +111,11 @@
         <img style=" max-width:70px; max-height:50px;" th:layer-src="${filePath}+'{{srr[j]}}'" th:src="${filePath}+'{{srr[j]}}'" />
     </div>
     {{# } }}
+</script>
+
+<script type="text/html" id="checkboxTpl">
+    <!-- 这里的 checked 的状态只是演示 -->
+    <input type="checkbox" name="lock" value="{{d.id}}" title="锁定" lay-filter="lockDemo" {{ d.id == 10006 ? 'checked' : '' }}>
 </script>
 
 <script type="text/javascript" th:src="@{/layui2.6/layui.js}" charset="UTF-8"></script>
@@ -120,17 +129,19 @@
         const tableIns = table.render({
             elem: '#test',
             type: 'GET'
-            ,url:'/user/userWhiteList'
+            ,url:'/org/selectPassOrgList'
             ,toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
             , where: {
+                title: $('input[name="title"]').val(),
                 name: $('input[name="name"]').val(),
-                sfzh: $('input[name="sfzh"]').val(),
-                phone: $('input[name="phone"]').val(),
+                checkUser: $('input[name="checkUser"]').val(),
                 orgCode: $('input[name="orgCode"]').val(),
                 orgName: $('input[name="orgName"]').val(),
-                role: $('input[name="role"]').val()
+                timeLeft: $('input[name="timeLeft"]').val(),
+                timeRight: $('input[name="timeRight"]').val(),
             }
-            ,title: '白名单数据表'
+            ,title: '通过审核的项目数据表'
+            , cellMinWidth: 80//全局定义常规单元格的最小宽度，layui 2.2.1 新增
             ,cols: [
                 [
                     {type: 'checkbox', fixed: 'left'}
@@ -139,23 +150,23 @@
                         return (data.LAY_TABLE_INDEX + 1);
                     }
                 }
-                    ,{field:'account', title:'用户名', align: 'center', width:120, edit: 'text'}
-                    ,{field:'role', title:'角色', align: 'center', width:120, edit: 'text'}
-                    ,{field:'sex', title:'性别', align: 'center', width:80, edit: 'text', sort: true}
-                    ,{field:'name', title:'姓名', align: 'center', width:100}
-                    ,{field:'sfzh', title:'身份证', align: 'center'}
-                    ,{field:'nation', title:'民族', align: 'center', width:80, sort: true}
-                    ,{field:'birth', title:'出生时间', align: 'center', width:120}
-                    ,{field:'phone', title:'联系电话', align: 'center', width:100, sort: true}
-                    ,{field:'area', title:'籍贯', align: 'center', width:120}
-                    ,{field:'filePath', title:'文件', align: 'center', width:100, templet: "#img", event: "pit"}
-                    ,{field:'orgCode', title:'组织编号', align: 'center', width:120}
-                    ,{field:'orgName', title:'组织名字', align: 'center', width:120}
-                    ,{field:'balance', title:'账户余额', align: 'center', width:120}
-                    ,{field:'status', title:'账号状态', align: 'center', width:120}
-                    ,{field:'createTime', title:'创建时间', align: 'center', width:120}
-                    ,{field:'updateTime', title:'更新时间', align: 'center', width:120}
-                    ,{fixed: 'right', title:'操作', align: 'center', toolbar: '#barDemo', width:100}
+                    ,{field:'title', title:'项目标题', align: 'center', edit: 'text'}
+                    ,{field:'content', title:'项目内容', align: 'center', edit: 'text'}
+                    ,{field:'resMoney', title:'项目金额', align: 'center', width:100, templet: "#img", event: "pit"}
+                    ,{field:'nowMoney', title:'已有金额', align: 'center', edit: 'text'}
+                    ,{field:'name', title:'申请人', align: 'center'}
+                    ,{field:'sfzh', title:'身份证号码', align: 'center'}
+                    ,{field:'phone', title:'联系电话', align: 'center', sort: true}
+                    //,{field:'lock', title:'是否锁定', width:110, templet: '#checkboxTpl', unresize: true}
+                    ,{field:'checkUser', title:'创建时间', align: 'center'}
+                    ,{field:'orgCode', title:'组织编码', align: 'center'}
+                    ,{field:'orgName', title:'组织名', align: 'center'}
+                    ,{field:'filePath', title:'文件', align: 'center'}
+                    ,{field:'status', title:'状态', align: 'center'}
+                    ,{field:'reason', title:'未通过原因', align: 'center'}
+                    ,{field:'createTime', title:'创建时间', align: 'center'}
+                    ,{field:'updateTime', title:'更新时间', align: 'center'}
+                    ,{fixed: 'right', title:'操作', align: 'center', toolbar: '#barDemo', width:80}
                 ]
             ]
             ,page: true
@@ -173,6 +184,11 @@
             return false;
         });
 
+        //监听锁定操作
+        form.on('checkbox(lockDemo)', function(obj){
+            layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
+        });
+
 
 //监听行工具事件
         table.on('tool(test)',function (obj) {
@@ -183,7 +199,7 @@
                     obj.del()
                     layer.close(index);
                     $.ajax({
-                        url: '/user/blackUser?id='+data.id ,
+                        url: '/user/whiteUser?id='+data.id ,
                         type:'POST',
                         success:function (res) {
                             if (res.code==200){
@@ -246,6 +262,7 @@
                         return false;
                     })
                     break;
+
             }
         });
     });
