--- a/src/main/resources/templates/backed/auditor/failedProjectList.html
+++ b/src/main/resources/templates/backed/auditor/failedProjectList.html
@@ -23,12 +23,6 @@
 
 </head>
 
-<script type="text/html" id="toolbarDemo">
-    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">批量拉黑</button>
-</script>
-<script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="del">拉进黑名单</a>
-</script>
 <body>
 <div class="x-nav">
           <span class="layui-breadcrumb">
@@ -49,20 +43,21 @@
                     <form class="layui-form" action="">
                         <div class="layui-form layui-form-pane">
                             <div class="layui-form-item">
-                                <div class="layui-inline">
-                                    <input type="text" id="name" name="name" placeholder="请输入姓名"
+
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="title" name="title" placeholder="项目名称"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="sfzh" name="sfzh" placeholder="请输入身份证号码"
+                                    <input type="text" id="name" name="name" placeholder="申请人"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="phone" name="phone" placeholder="请输入联系方式"
+                                    <input type="text" id="checkUser" name="checkUser" placeholder="审核人"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="orgCode" name="orgCode" placeholder="请输入组织编号"
+                                    <input type="text" id="orgCode" name="orgCode" placeholder="组织编号"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
@@ -70,7 +65,11 @@
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="role" name="role" placeholder="请输入角色"
+                                    <input type="text" id="timeLeft" name="timeLeft" placeholder="创建时间"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-inline" style="margin-left: -1px">
+                                    <input type="text" id="timeRight" name="timeRight" placeholder="创建时间"
                                            autocomplete="off" class="layui-input">
                                 </div>
 
@@ -100,6 +99,7 @@
 <!--             style="border: 1px solid #aaaaaa;cursor: pointer">-->
 <!--    </div>-->
 <!--</script>-->
+
 <script id="img" type="text/html">
     {{# var srr=d.filePath.split(",");
     for(var j in srr) { srr[j] }}
@@ -120,17 +120,18 @@
         const tableIns = table.render({
             elem: '#test',
             type: 'GET'
-            ,url:'/user/userWhiteList'
+            ,url:'/org/selectNoPassOrgList'
             ,toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
             , where: {
+                title: $('input[name="title"]').val(),
                 name: $('input[name="name"]').val(),
-                sfzh: $('input[name="sfzh"]').val(),
-                phone: $('input[name="phone"]').val(),
+                checkUser: $('input[name="checkUser"]').val(),
                 orgCode: $('input[name="orgCode"]').val(),
                 orgName: $('input[name="orgName"]').val(),
-                role: $('input[name="role"]').val()
+                timeLeft: $('input[name="timeLeft"]').val(),
+                timeRight: $('input[name="timeRight"]').val(),
             }
-            ,title: '白名单数据表'
+            ,title: '没通过审核的项目数据表'
             ,cols: [
                 [
                     {type: 'checkbox', fixed: 'left'}
@@ -139,27 +140,18 @@
                         return (data.LAY_TABLE_INDEX + 1);
                     }
                 }
-                    ,{field:'account', title:'用户名', align: 'center', width:120, edit: 'text'}
-                    ,{field:'role', title:'角色', align: 'center', width:120, edit: 'text'}
-                    ,{field:'sex', title:'性别', align: 'center', width:80, edit: 'text', sort: true}
-                    ,{field:'name', title:'姓名', align: 'center', width:100}
-                    ,{field:'sfzh', title:'身份证', align: 'center'}
-                    ,{field:'nation', title:'民族', align: 'center', width:80, sort: true}
-                    ,{field:'birth', title:'出生时间', align: 'center', width:120}
-                    ,{field:'phone', title:'联系电话', align: 'center', width:100, sort: true}
-                    ,{field:'area', title:'籍贯', align: 'center', width:120}
+                    ,{field:'orgCode', title:'组织编号', align: 'center', width:120, edit: 'text'}
+                    ,{field:'orgName', title:'组织名称', align: 'center', width:120, edit: 'text'}
                     ,{field:'filePath', title:'文件', align: 'center', width:100, templet: "#img", event: "pit"}
-                    ,{field:'orgCode', title:'组织编号', align: 'center', width:120}
-                    ,{field:'orgName', title:'组织名字', align: 'center', width:120}
-                    ,{field:'balance', title:'账户余额', align: 'center', width:120}
-                    ,{field:'status', title:'账号状态', align: 'center', width:120}
+                    ,{field:'address', title:'地址', align: 'center', width:80, edit: 'text', sort: true}
+                    ,{field:'linkman', title:'联系人', align: 'center', width:60}
+                    ,{field:'phone', title:'联系方式', align: 'center', width:80}
+                    ,{field:'email', title:'电子邮箱', align: 'center', width:80, sort: true}
+                    ,{field:'reason', title:'原因', align: 'center', width:80, sort: true}
                     ,{field:'createTime', title:'创建时间', align: 'center', width:120}
-                    ,{field:'updateTime', title:'更新时间', align: 'center', width:120}
-                    ,{fixed: 'right', title:'操作', align: 'center', toolbar: '#barDemo', width:100}
                 ]
             ]
             ,page: true
-            , even: true
         });
 
         //搜索重载
@@ -183,7 +175,7 @@
                     obj.del()
                     layer.close(index);
                     $.ajax({
-                        url: '/user/blackUser?id='+data.id ,
+                        url: '/user/whiteUser?id='+data.id ,
                         type:'POST',
                         success:function (res) {
                             if (res.code==200){
