--- a/src/main/resources/templates/backed/admin/addOrg.html
+++ b/src/main/resources/templates/backed/admin/addOrg.html
@@ -66,7 +66,9 @@
             <div style="margin-left: 100px">
                 <div class="form-group" style="display:inline-block;vertical-align: top;">
                     <div class="input-group"><span class="input-group-addon">产品图组</span>
-                        <input type="file" name="file" value="请选择文件" multiple>
+<!--                        <input th:type="file" name="file" multiple>-->
+                        <input type="hidden" name="filePath">
+                        <button type="button" class="layui-btn" id="upload">上传图片</button>
                     </div>
                 </div>
             </div>
@@ -83,9 +85,10 @@
 
 <script type="text/javascript" th:src="@{/layui2.6/layui.js}" charset="UTF-8"></script>
 <script>
-    layui.use(['form', 'element'], function () {
+    layui.use(['form', 'element','upload'], function () {
         const form = layui.form;
         const element = layui.element;
+        const upload = layui.upload;
         const jQuery = layui.jquery;
         const layer = layui.layer;
 
@@ -94,8 +97,30 @@
         $("button[type='submit']").click(function () {
             var st = parent.layer.getFrameIndex(window.name);
             parent.layer.close(st);
-            parent.window.location.href = "/admin";
+            parent.window.location.href = "/toAuditList";
         })
+
+        //执行实例
+        var uploadInst = upload.render({
+            elem: '#upload' //绑定元素
+            ,url: '/upload' //上传接口
+            ,multiple: true
+            ,done: function(res){
+                console.log(res)
+                //上传完毕回调
+                if (res.code == 200){
+                    var val = $('input[name="filePath"]').val();
+                    if (val == ""){
+                        $('input[name="filePath"]').val(res.data);
+                    }else{
+                        $('input[name="filePath"]').val(val+','+res.data);
+                    }
+                }
+            }
+            ,error: function(){
+                //请求异常回调
+            }
+        });
 
         //日期
         laydate.render({
