--- a/src/main/resources/templates/backed/admin/admin.html
+++ b/src/main/resources/templates/backed/admin/admin.html
@@ -84,6 +84,11 @@
                             <cite>待审核列表</cite></a>
                     </li>
                     <li>
+                        <a onclick="xadmin.add_tab('添加项目','/toAddProject')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>添加项目</cite></a>
+                    </li>
+                    <li>
                         <a onclick="xadmin.add_tab('待发布列表','/toBeReleasedList')">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>待发布列表</cite></a>
