--- a/src/main/resources/templates/fronted/index.html
+++ b/src/main/resources/templates/fronted/index.html
@@ -14,34 +14,7 @@
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
-    <div class="layui-header">
-        <div class="layui-logo layui-hide-xs layui-bg-black">公益众筹系统</div>
-        <!-- 头部区域（可配合layui 已有的水平导航） -->
-        <ul class="layui-nav layui-layout-left">
-            <!-- 移动端显示 -->
-            <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-header-event="menuLeft">
-                <i class="layui-icon layui-icon-spread-left"></i>
-            </li>
-
-            <li class="layui-nav-item layui-hide-xs"><a href="">首页</a></li>
-            <li class="layui-nav-item layui-hide-xs"><a href="">公益项目</a></li>
-            <li class="layui-nav-item layui-hide-xs"><a href="">公益组织</a></li>
-            <li class="layui-nav-item layui-hide-xs"><a href="">失信人名单</a></li>
-
-        </ul>
-        <ul class="layui-nav layui-layout-right">
-            <li class="layui-nav-item layui-hide layui-show-md-inline-block">
-                <a href="javascript:;">
-                    <span>hh</span>
-                </a>
-                <dl class="layui-nav-child">
-                    <dd><a href="">Your Profile</a></dd>
-                    <dd><a href="">Settings</a></dd>
-                    <dd><a href="">Sign out</a></dd>
-                </dl>
-            </li>
-        </ul>
-    </div>
+    <div th:insert="fronted/header :: header"></div>
     <div class="layui-body">
         <div>
             <div class="layui-carousel auto" id="test10">
