--- a/src/main/resources/templates/fronted/index.html
+++ b/src/main/resources/templates/fronted/index.html
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-
+<img src="D:/uploadImage/img_1646817473837732.jpg">
 <script src="/lib/layui/layui.js"></script>
 <!-- 注意：如果你直接复制所有代码到本地，上述 JS 路径需要改成你本地的 -->
 <script>
