--- a/src/main/resources/templates/fronted/index.html
+++ b/src/main/resources/templates/fronted/index.html
@@ -15,7 +15,7 @@
 <div class="layui-layout layui-layout-admin">
     <div th:insert="fronted/header :: header"></div>
     <div class="layui-body">
-        <div>
+        <div style=" position: absolute !important;right: 30%; top: 10px">
             <div class="layui-carousel auto" id="test10">
                 <div carousel-item="">
                     <div th:each="b:${banners}">
