--- a/src/main/resources/templates/fronted/header.html
+++ b/src/main/resources/templates/fronted/header.html
@@ -35,7 +35,7 @@
                 <dl class="layui-nav-child">
                     <dd><a href="">Your Profile</a></dd>
                     <dd><a href="">Settings</a></dd>
-                    <dd><a href="">Sign out</a></dd>
+                    <dd><a th:href="@{/logout}">退出</a></dd>
                 </dl>
             </li>
         </ul>
