前端的部分文件已更新

--- a/src/main/resources/templates/fronted/header.html
+++ b/src/main/resources/templates/fronted/header.html
@@ -33,7 +33,7 @@
                     <span>hh</span>
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">Your Profile</a></dd>
+                    <dd><a th:href="@{/main/toPersonalCenter}">Your Profile</a></dd>
                     <dd><a href="">Settings</a></dd>
                     <dd><a th:href="@{/logout}">退出</a></dd>
                 </dl>
