--- a/src/main/resources/templates/fronted/header.html
+++ b/src/main/resources/templates/fronted/header.html
@@ -23,7 +23,7 @@
 
             <li class="layui-nav-item layui-hide-xs"><a href="">首页</a></li>
             <li class="layui-nav-item layui-hide-xs"><a href="">公益项目</a></li>
-            <li class="layui-nav-item layui-hide-xs"><a href="">公益组织</a></li>
+            <li class="layui-nav-item layui-hide-xs"><a th:href=@{"/main/toshoworg"}>公益组织</a></li>
             <li class="layui-nav-item layui-hide-xs"><a href="">失信人名单</a></li>
 
         </ul>
