--- a/src/main/resources/templates/fronted/orgindex.html
+++ b/src/main/resources/templates/fronted/orgindex.html
@@ -9,36 +9,34 @@
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
-    <div class="layui-header">
-        <div class="layui-logo layui-hide-xs layui-bg-black">公益众筹系统</div>
-        <!-- 头部区域（可配合layui 已有的水平导航） -->
-        <ul class="layui-nav layui-layout-left">
-            <!-- 移动端显示 -->
-            <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-header-event="menuLeft">
-                <i class="layui-icon layui-icon-spread-left"></i>
-            </li>
-
-            <li class="layui-nav-item layui-hide-xs"><a href="">首页</a></li>
-            <li class="layui-nav-item layui-hide-xs"><a href="">公益项目</a></li>
-            <li class="layui-nav-item layui-hide-xs"><a href="">公益组织</a></li>
-            <li class="layui-nav-item layui-hide-xs"><a href="">失信人名单</a></li>
-
-        </ul>
-        <ul class="layui-nav layui-layout-right">
-            <li class="layui-nav-item layui-hide layui-show-md-inline-block">
-                <a href="javascript:;">
-                    <span>hh</span>
-                </a>
-                <dl class="layui-nav-child">
-                    <dd><a href="">Your Profile</a></dd>
-                    <dd><a href="">Settings</a></dd>
-                    <dd><a href="">Sign out</a></dd>
-                </dl>
-            </li>
-        </ul>
-    </div>
+    <div th:insert="fronted/header :: header"></div>
     <div class="layui-body">
-
+        <ul>
+            <tr th:each="o:${orgresult}">
+                <li class="tupian">
+                    <div class="card">
+                        <a>
+                            <div class="wall"><img th:src="@{${}}" width="295px" height="166">
+                            </div>
+                            <p th:text="${o.orgName}"></p>
+                            <!--<div>
+                                <div class="name"><p style="text-align: center; font-size: 20px"
+                                                     th:text="${s.p}"></p></div>
+                                <div class="price" style="margin-top: 10px"><i
+                                        style="float: left; font-size: 20px;margin-top: 8px;margin-right: 10px;"
+                                        class="layui-icon layui-icon-rmb"></i>
+                                    <p style="text-align: center; float: left; font-size: 30px; color: red;"
+                                       th:text="${s.price}"></p><a
+                                            th:href="@{/main/userproduce(userid=${s.userid},storename=${s.storename})}"
+                                            style="float: right;margin-right: 10px"
+                                            class="layui-btn layui-btn-primary layui-border-black">进入商家</a>
+                                </div>
+                            </div>-->
+                        </a>
+                    </div>
+                </li>
+            </tr>
+        </ul>
     </div>
 </div>
 <script src="/lib/layui/layui.js"></script>
