--- a/src/main/resources/templates/fronted/orgindex.html
+++ b/src/main/resources/templates/fronted/orgindex.html
@@ -16,7 +16,7 @@
                 <li class="tupian">
                     <div class="card">
                         <a>
-                            <div class="wall"><img th:src="@{${}}" width="295px" height="166">
+                            <div class="wall"><img th:src="@{${filePath+o.pic}}" width="295px" height="166">
                             </div>
                             <p th:text="${o.orgName}"></p>
                             <!--<div>
